# diden_gui_android

./: CMakeLists.txt  README.md  camera.grpc.pb.cc  camera.grpc.pb.h  camera.pb.cc  camera.pb.h  camera.proto  diden_mainwindow.cpp  diden_mainwindow.h  diden_mainwindow.ui  main.cpp
